﻿0.1.1 - Initial Source by L0RE[CR]

...

[B]Version 1.0.1  (17.08.2019)[/B] by realvito[CR]
- fixed: Rubrik = Sendungen Fehler beim öffnen des Ordners
- fixed: Rubrik = Themen es wird KEIN Inhalt angezeigt
- fixed: Videos können nicht abgespielt werden (läuft jetzt über "script.module.youtube.dl")