@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<addon id="plugin.video.L0RE.weltderwunder" name="Welt der Wunder" version="1.0.1" provider-name="L0RE">
+<addon id="plugin.video.L0RE.weltderwunder" name="Welt der Wunder" version="1.0.2" provider-name="L0RE">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 		<import addon="script.module.beautifulsoup4" version="4.3.2"/>
@@ -26,10 +26,8 @@
 			<icon>icon.png</icon>
 			<fanart>fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR orangered]Version 1.0.1  (17.08.2019)[/COLOR][/B] by realvito[CR]
-- fixed: Rubrik = Sendungen Fehler beim öffnen des Ordners
-- fixed: Rubrik = Themen es wird KEIN Inhalt angezeigt
-- fixed: Videos können nicht abgespielt werden (läuft jetzt über "script.module.youtube.dl")
+		<news>[B][COLOR orangered]Version 1.0.2  (23.08.2019)[/COLOR][/B] by realvito[CR]
+- fixed: ständiger Encodingfehler bei Umlauten in den Bildern
 		</news>
 	</extension>
 </addon>
