@@ -6,3 +6,6 @@
 - fixed: Rubrik = Sendungen Fehler beim öffnen des Ordners
 - fixed: Rubrik = Themen es wird KEIN Inhalt angezeigt
 - fixed: Videos können nicht abgespielt werden (läuft jetzt über "script.module.youtube.dl")
+
+[B]Version 1.0.2  (23.08.2019)[/B] by realvito[CR]
+- fixed: ständiger Encodingfehler bei Umlauten in den Bildern
